@startuml
' Class diagram for US41 – Record vaccine administration
hide circle
skinparam classAttributeIconSize 0

' ===== Data Transfer Object =====
class VaccinationProcessDTO {
  + snsUserNumber : string
  + vaccineCode : string
  + lotNumber : string
}

' ===== UI Layer =====
class RecordVaccinationView {
}

class RecordVaccinationController {
  + recordVaccination(dto : VaccinationProcessDTO) : Result
}

class App {
  + getVaccinationProcessService() : VaccinationProcessService
}

RecordVaccinationView ..> RecordVaccinationController
RecordVaccinationController ..> VaccinationProcessDTO
RecordVaccinationController ..> VaccinationProcessService

' ===== Service Layer =====
class VaccinationProcessService {
  + create(dto : VaccinationProcessDTO) : VaccinationProcess
  + save(proc : VaccinationProcess) : Result
  + removeFromWaitingRoom(string snsUserNumber) : void
  + assignToRecoveryRoom(string snsUserNumber) : void
}

App --> VaccinationProcessService : creates

' ===== Repository Factory =====
interface RepositoryFactory {
  + getVaccinationProcessRepository() : VaccinationProcessRepository
  + getWaitingRoomRepository() : WaitingRoomRepository
  + getRecoveryRoomRepository() : RecoveryRoomRepository
}

class MemoryRepositoryFactory {
}

MemoryRepositoryFactory .up.|> RepositoryFactory

' ===== Repository Interfaces =====
interface VaccinationProcessRepository {
  + save(VaccinationProcess process) : Result
}

interface WaitingRoomRepository {
  + removeSNSUser(string snsUserNumber) : void
}

interface RecoveryRoomRepository {
  + assignSNSUser(string snsUserNumber) : void
}

' ===== Concrete Repositories =====
class VaccinationProcessMemoryRepository
class WaitingRoomMemoryRepository
class RecoveryRoomMemoryRepository

VaccinationProcessMemoryRepository .up.|> VaccinationProcessRepository
WaitingRoomMemoryRepository .up.|> WaitingRoomRepository
RecoveryRoomMemoryRepository .up.|> RecoveryRoomRepository

MemoryRepositoryFactory --> VaccinationProcessMemoryRepository
MemoryRepositoryFactory --> WaitingRoomMemoryRepository
MemoryRepositoryFactory --> RecoveryRoomMemoryRepository

VaccinationProcessService ..> VaccinationProcessRepository
VaccinationProcessService ..> WaitingRoomRepository
VaccinationProcessService ..> RecoveryRoomRepository

' ===== Domain Model =====
class VaccinationProcess {
  + snsUserNumber : string
  + vaccineCode : string
  + lotNumber : string
  + administrationDateTime : datetime
}

class SNSUser {
  + snsUserNumber : string
  + name : string
}

class Nurse {
  + employeeId : string
  + name : string
}

class Vaccine {
  + code : string
  + name : string
}

class WaitingRoom {
}

class RecoveryRoom {
}

VaccinationProcess --> "1" SNSUser
VaccinationProcess --> "1" Vaccine
VaccinationProcess --> "1" Nurse

WaitingRoom --> "*" SNSUser
RecoveryRoom --> "*" SNSUser

@enduml
